# Systeme-Solaire

./: README.md
TP_OpenGL/: CMakeLists.txt  ambientlight.cpp  ambientlight.h  camera.cpp  main.cpp  object.cpp  object.h  pointlight.cpp  pointlight.h  shader.cpp  texture.cpp  userinterface.cpp  userinterface.h
TP_OpenGL/shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  SunFragmentShader.fragmentshader  SunVertexShader.vertexshader
